--- a/jpa-soft-delete/src/main/resources/application.yml
+++ b/jpa-soft-delete/src/main/resources/application.yml
@@ -2,8 +2,8 @@ server:
   port: 9000
 spring:
   datasource:
-    url: jdbc:mysql://10.64.90.127:53306/0x1c?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-    username: root
+    url: jdbc:h2:mem:poc;DATABASE_TO_UPPER=false
+    username: sa
     password: 4DevOn1y
   jpa:
     show-sql: true
